# BackWords

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  manifest.json  netlify.toml  registerSW.js  sw.js
assets/: BenchmarkLab-B2lO8Dn3.css  BenchmarkLab-BX__n8V9.js  BenchmarkLab-CItpuXhS.js  BenchmarkLab-Dcxuuj3a.js  BenchmarkLab-DujBPoUP.js  BenchmarkLab-n3SG8zDp.js  ConceptChip-B23tXvMe.js  ConceptChip-BAh0sGW0.js  ConceptChip-BBm-jDzD.js  ConceptChip-BDRkk853.js  ConceptChip-BPoAqSHB.js  ConceptChip-Bi_1H9AO.js  ConceptChip-Bw1BcY9o.js  ConceptChip-CV_AXBhk.js  ConceptChip-CdTlTRVP.js  ConceptChip-Chd8zK-H.js  ConceptChip-CokzKNB6.js  ConceptChip-D1YQ4UBK.js  ConceptChip-D9gNYA6O.js  ConceptChip-DXQqZAuk.js  ConceptChip-DayJcX3T.js  ConceptChip-DniBAdxB.js  ConceptChip-QRUnrCtY.js  ConceptChip-TBPLCOV4.css  ConceptChip-ZQlCDqF8.js  ConceptChip-ufDnK-6G.js  ConceptChip-xd2aosJx.js  Home-B7-p_mS5.js  Home-C6gnUPA7.css  Home-CAJS2nKP.js  Home-CL2r8uGr.js  Home-CTQ2qpaQ.js  Home-CVA0Gxlm.js  Home-CcO__Wq3.js  Home-CgZkBYIU.js  Home-D0YwIFZj.js  Home-D60rt01F.js  Home-DDxFpaZI.js  Home-DTQRFzNA.js  Home-DUOq6tXr.js  (+207 more)
dist-placeholder/: index.html
docs/: api-contract.md  app-concept.md  data-model.md  design-system.md  icon-notes.md  mvp.md
proxy/: README.md  pyproject.toml
proxy/app/: data_loader.py  main.py  mock_engine.py  models.py  settings.py
pwa/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.js  (+1 more)
(+112 files in other folders)
